--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -43,6 +43,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
   protected Rollup__mdt metadata;
   protected Boolean isFullRecalc = false;
   protected Boolean isNoOp;
+  protected Boolean isNoOpOverridden = false;
   protected Boolean isCDCUpdate = false;
   protected Integer queryCount;
   protected RollupCalcItemReplacer calcItemReplacer;
@@ -704,7 +705,11 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     global transient List<SObject> recordsToRollup = new List<SObject>();
     @InvocableVariable(label='Prior records to rollup' description='The old version of the records for update/upsert')
     global transient List<SObject> oldRecordsToRollup = new List<SObject>();
-
+    @InvocableVariable(
+      label='Parent Record Id for Empty Children Collections'
+      description='Runs rollup calculations even if no matching children when passed. Must also fill out Child Object Type When Rollup Started From Parent property'
+    )
+    global Id parentRecordIdForEmptyChildrenCollections;
     @InvocableVariable(
       label='Should rollup to ultimate hierarchy parent'
       description='Used in conjunction with Ultimate Parent Field to drive hierarchical parent rollups'
@@ -739,11 +744,17 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     private final String rollupContext;
     private final SObjectType sObjectType;
     private final Set<Rollup__mdt> rollupMetadata = new Set<Rollup__mdt>();
+    private final Map<Id, SObject> children = new Map<Id, SObject>();
+    private final Map<Id, SObject> oldChildren = new Map<Id, SObject>();
+    private final Boolean shouldOverrideNoOp;
 
     private FlowInputWrapper(FlowInput flowInput, String rollupContext, SObjectType sObjectType) {
       this.flowInput = flowInput;
       this.rollupContext = rollupContext;
       this.sObjectType = sObjectType;
+      this.shouldOverrideNoOp =
+        this.flowInput.parentRecordIdForEmptyChildrenCollections != null &&
+        this.flowInput.calcItemTypeWhenRollupStartedFromParent != null;
     }
   }
 
@@ -769,6 +780,17 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
 
       flowInput.rollupOperation = flowInput.rollupOperation.toUpperCase();
       RollupLogger.Instance.log('processing invocable data:', flowInput, LoggingLevel.INFO);
+
+      if (
+        flowInput.parentRecordIdForEmptyChildrenCollections != null &&
+        flowInput.calcItemTypeWhenRollupStartedFromParent != null &&
+        flowInput.recordsToRollup?.isEmpty() == true
+      ) {
+        Schema.DescribeSObjectResult childDescribe = RollupFieldInitializer.Current.getDescribeFromName(flowInput.calcItemTypeWhenRollupStartedFromParent);
+        SObject stubChild = childDescribe.getSObjectType().newSObject(childDescribe.getKeyPrefix() + '0'.repeat(12));
+        stubChild.put(flowInput.lookupFieldOnCalcItem, flowInput.parentRecordIdForEmptyChildrenCollections);
+        flowInput.recordsToRollup.add(stubChild);
+      }
 
       if (flowInput.recordsToRollup?.isEmpty() != false) {
         flowOutput.message = 'No records to rollup, returning early';
@@ -801,12 +823,9 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
           wrapper = new FlowInputWrapper(flowInput, rollupContext, sObjectType);
           metaToInputWrapper.put(meta, wrapper);
         }
-        if (wrapper.rollupMetadata.contains(meta)) {
-          wrapper.flowInput.recordsToRollup.addAll(flowInput.recordsToRollup);
-          wrapper.flowInput.oldRecordsToRollup.addAll(flowInput.oldRecordsToRollup);
-        } else {
-          wrapper.rollupMetadata.add(meta);
-        }
+        wrapper.children.putAll(flowInput.recordsToRollup);
+        wrapper.oldChildren.putAll(flowInput.oldRecordsToRollup);
+        wrapper.rollupMetadata.add(meta);
       }
     }
     if (metaToInputWrapper.isEmpty()) {
@@ -822,25 +841,29 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       // here we clone the list because it can get winnowed in "processCustomMetadata"
       List<Rollup__mdt> metas = new List<Rollup__mdt>(wrapper.rollupMetadata);
       Map<Schema.SObjectType, List<Rollup>> typeToWinnowedRollups;
-      wrapper.flowInput.recordsToRollup = replaceFlowInputCalcItemsIfNecessary(hashCodeToCalcItems, wrapper.flowInput.recordsToRollup, metas);
+      List<SObject> children = wrapper.children.values();
+      wrapper.flowInput.recordsToRollup = replaceFlowInputCalcItemsIfNecessary(hashCodeToCalcItems, children, metas);
       Map<Id, SObject> oldFlowRecords = RollupFieldInitializer.Current.createSafeMap(
-        replaceFlowInputCalcItemsIfNecessary(hashCodeToCalcItems, wrapper.flowInput.oldRecordsToRollup, metas)
+        replaceFlowInputCalcItemsIfNecessary(hashCodeToCalcItems, wrapper.oldChildren.values(), metas)
       );
 
       if (wrapper.flowInput.deferProcessing) {
         typeToWinnowedRollups = new Map<Schema.SObjectType, List<Rollup>>{ wrapper.sObjectType => new List<Rollup>() };
       }
 
-      processCustomMetadata(
-        typeToWinnowedRollups != null ? typeToWinnowedRollups : localRollups,
-        metas,
-        wrapper.flowInput.recordsToRollup,
-        oldFlowRecords,
-        new Set<String>(),
-        wrapper.rollupContext,
-        fromInvocable,
-        typeToWrappedMeta
-      );
+      Map<Schema.SObjectType, List<Rollup>> typeToLocalRollups = typeToWinnowedRollups != null ? typeToWinnowedRollups : localRollups;
+      processCustomMetadata(typeToLocalRollups, metas, children, oldFlowRecords, new Set<String>(), wrapper.rollupContext, fromInvocable, typeToWrappedMeta);
+
+      if (wrapper.shouldOverrideNoOp) {
+        List<Rollup> rollups = typeToLocalRollups.get(wrapper.sObjectType);
+        if (rollups != null) {
+          for (Rollup roll : rollups) {
+            roll.isNoOp = false;
+            roll.isNoOpOverridden = true;
+            roll.calcItems = children;
+          }
+        }
+      }
 
       if (typeToWinnowedRollups != null) {
         for (Schema.SObjectType typeKey : typeToWinnowedRollups.keyset()) {
@@ -849,7 +872,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       }
 
       if (metas.isEmpty() == false) {
-        Rollup rollupConductor = getRollup(metas, wrapper.sObjectType, wrapper.flowInput.recordsToRollup, oldFlowRecords, null, fromInvocable);
+        Rollup rollupConductor = getRollup(metas, wrapper.sObjectType, children, oldFlowRecords, null, fromInvocable);
         String logMessage = 'adding invocable rollup to list:';
         if (wrapper.flowInput.deferProcessing) {
           logMessage = 'deferring processing for rollup:';
