Added undelete context for CDC

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -1642,7 +1642,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
 
     // it would have been nice if this was an enum!
     switch on header.changeType {
-      when 'CREATE', 'GAP_CREATE' {
+      when 'CREATE', 'GAP_CREATE', 'UNDELETE' {
         apexContext = TriggerOperation.AFTER_INSERT;
       }
       when 'UPDATE', 'GAP_UPDATE' {
