Fixes run without children support for refresh flows that pass Parent Record Id For Empty Children Collection argument when Get Records returns no children for a given parent

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -784,8 +784,9 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       if (
         flowInput.parentRecordIdForEmptyChildrenCollections != null &&
         flowInput.calcItemTypeWhenRollupStartedFromParent != null &&
-        flowInput.recordsToRollup?.isEmpty() == true
+        flowInput.recordsToRollup?.isEmpty() != false
       ) {
+        flowInput.recordsToRollup = new List<SObject>();
         Schema.DescribeSObjectResult childDescribe = RollupFieldInitializer.Current.getDescribeFromName(flowInput.calcItemTypeWhenRollupStartedFromParent);
         SObject stubChild = childDescribe.getSObjectType().newSObject(childDescribe.getKeyPrefix() + '0'.repeat(12));
         stubChild.put(flowInput.lookupFieldOnCalcItem, flowInput.parentRecordIdForEmptyChildrenCollections);
