--- a/rollup/core/classes/RollupParentResetProcessor.cls
+++ b/rollup/core/classes/RollupParentResetProcessor.cls
@@ -68,12 +68,14 @@ public without sharing class RollupParentResetProcessor extends RollupFullBatchR
     for (SObject parentItem : parentItems) {
       for (Rollup__mdt rollupMeta : this.rollupMetas) {
         if (
+          rollupMeta.LookupObject__c == this.calcItemType.getDescribe().getName() &&
           this.parentRollupFieldHasBeenReset(
             rollupMeta.LookupFieldOnLookupObject__c,
             parentItem,
             rollupMeta.LookupObject__c,
             rollupMeta.RollupFieldOnLookupObject__c
-          ) == false && parentFields.containsKey(rollupMeta.RollupFieldOnLookupObject__c)
+          ) == false &&
+          parentFields.containsKey(rollupMeta.RollupFieldOnLookupObject__c)
         ) {
           parentItem.put(rollupMeta.RollupFieldOnLookupObject__c, getDefaultValue(rollupMeta));
         }
