--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -528,6 +528,12 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
         }
       }
       this.fullRecalcProcessor?.processParentFieldsToReset(recordsToReset);
+      Map<Id, SObject> idToLookupItem = new Map<Id, SObject>(lookupItemsToAssign);
+      for (SObject recordToReset : recordsToReset) {
+        if (idToLookupItem.containsKey(recordToReset.Id) == false && roll.lookupObj == recordToReset.getSObjectType()) {
+          lookupItemsToAssign.add(recordToReset);
+        }
+      }
     }
     return lookupItemsToAssign;
   }
@@ -765,6 +771,16 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     return Limits.getLimitQueueableJobs() > Limits.getQueueableJobs();
   }
 
+  protected Object getDefaultValue(Rollup__mdt meta) {
+    Object resetVal = null;
+    if (meta.FullRecalculationDefaultNumberValue__c != null) {
+      resetVal = meta.FullRecalculationDefaultNumberValue__c;
+    } else if (meta.FullRecalculationDefaultStringValue__c != null) {
+      resetVal = meta.FullRecalculationDefaultStringValue__c;
+    }
+    return resetVal;
+  }
+
   private void storeParentResetField(String lookupField, SObject parent) {
     String resetKey = String.valueOf(parent.get(lookupField));
     if (resetKey != null) {
@@ -920,6 +936,9 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     List<SObject> localLookupItems = new List<SObject>();
     Set<String> lookupItemKeys = new Set<String>(calcItemsByLookupField.keySet());
     this.previouslyResetParents.retainAll(lookupItemKeys);
+    if (this.fullRecalcProcessor != null) {
+      lookupItemKeys.addAll(this.fullRecalcProcessor.getRecordIdentifiers());
+    }
     for (String lookupId : calcItemsByLookupField.keySet()) {
       if (updatedLookupRecords.containsKey(lookupId)) {
         lookupItemKeys.remove(lookupId);
@@ -928,7 +947,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
         localLookupItems.add(updatedLookupObject);
       }
     }
-    localLookupItems.addAll(roll.getExistingLookupItems(lookupItemKeys, roll, this.lookupObjectToUniqueFieldNames.get(roll.lookupObj)));
+    localLookupItems.addAll(this.getExistingLookupItems(lookupItemKeys, roll, this.lookupObjectToUniqueFieldNames.get(roll.lookupObj)));
     return localLookupItems;
   }
 
@@ -1263,6 +1282,9 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
           calc = this.getCalculator(calc, roll, bag, lookupRecord, priorValToUse, key, roll.lookupFieldOnCalcItem);
           this.conditionallyPerformUpdate(priorVal, calc, lookupRecord, roll, recordsToUpdate, ParentUpdateType.LOOKUP, localCalcItems);
         }
+      } else {
+        this.logger.log('About to reset parent field for', lookupRecord, System.LoggingLevel.DEBUG);
+        this.getDML().updateField(roll.opFieldOnLookupObject, lookupRecord, this.getDefaultValue(roll.metadata));
       }
     }
 
